# Multiscreen-HF

./: .gitignore  APPLY_SUPPLEMENT.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: p0-smoke.yml
configs/debug_multiscreen_psi8_768/: config.json  run.json
configs/debug_tiny_llama_768/: config.json  run.json
configs/multiscreen_psi16_768/: config.json  run.json
configs/p0_3_multiscreen_psi16_768/: config.json  run.json
configs/p0_3_multiscreen_psi8_768/: config.json  run.json
configs/p0_4_multiscreen_psi16_gpt2_ctx4096/: README.md  config.json
configs/p0_4_multiscreen_psi8_gpt2_ctx4096/: README.md  config.json
configs/tiny_llama_768/: config.json  run.json
docs/: ENVIRONMENT_TEMPLATE.md  HANDOFF.md  KNOWN_LIMITATIONS.md  LOGGING_POLICY.md  P0_4_PLAN.md  P0_4_RESULTS_TEMPLATE.md  RELEASE_CHECKLIST.md  REPOSITORY_AUDIT.md  TESTING.md  VALIDATION_STATUS.md
docs/validation_results/: P0-3_COMPLETE.md  (+6 more)
multiscreen_log_supplement/: APPLY_LOG_SUPPLEMENT.md
multiscreen_transformers/: __init__.py  compile_utils.py  configuration_multiscreen.py  data.py  modeling_multiscreen.py
oracle/: README.md  paper_math_oracle.py  test_against_hf_port.py  test_formula_units.py  test_paper_math_oracle_selfcheck.py  test_paper_math_oracle_smoke.py
p0_2_three_way_minimal/: README.md  test_three_way_minimal.py
repo_audit_supplement/: APPLY_REPOSITORY_AUDIT.md
scripts/: cache_utils.py  count_params.py  eval_smoke.py  p0_3_tinystories_stability.py  p0_4_gpt2_context4096_smoke.py  train_pretrain_sft.py  train_tokenizer_spm.py
(+5 files in other folders)
