[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiscreen-hf-p0"
version = "0.1.2"
description = "Unofficial Hugging Face Transformers-compatible Multiscreen implementation with P0 validation artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Unofficial Multiscreen HF contributors" }]
keywords = ["multiscreen", "transformers", "language-model", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.4",
  "transformers>=4.57.0",
  "datasets>=3.0.0",
  "tokenizers>=0.20.0",
  "safetensors>=0.4.5",
  "numpy>=1.26",
]

[project.optional-dependencies]
train = ["trl>=0.24.0", "accelerate>=1.0.0", "sentencepiece>=0.2.0"]
dev = ["pytest>=8", "ruff"]

[tool.setuptools.packages.find]
include = ["multiscreen_transformers*"]
exclude = ["third_party*", "oracle*", "scripts*", "configs*", "docs*"]

[tool.ruff]
line-length = 120
target-version = "py310"
